--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
+        android:name=".application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -51,6 +52,9 @@
             android:theme="@style/MainTheme" />
         <activity
             android:name=".activities.RegisterActivity"
+            android:theme="@style/MainTheme" />
+        <activity
+            android:name=".activities.SearchActivity"
             android:theme="@style/MainTheme" />
 
         <meta-data
