--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,13 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.jph.takephoto:takephoto_library:4.0.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'org.litepal.android:core:2.0.0'
+    implementation 'com.android.support:design:28.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
