管理员端工作调度的实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,9 @@
         <activity
             android:name=".activities.ModifyPhotoActivity"
             android:theme="@style/MyTheme" />
+        <activity
+            android:name=".activities.JobSchedulingActivity"
+            android:theme="@style/MyTheme" />
 
 
 
