--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
+    <!--使用蓝牙权限-->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
+
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
@@ -74,6 +79,9 @@
             android:theme="@style/MyTheme" />
         <activity
             android:name=".activities.JobSchedulingActivity"
+            android:theme="@style/MyTheme" />
+        <activity
+            android:name=".activities.IndoorPositionActivity"
             android:theme="@style/MyTheme" />
 
 
