--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <!--用于申请获取蓝牙信息进行室内定位-->
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-
+    <uses-permission android:name="android.permission.SEND_SMS"/>
     <!--使用蓝牙权限-->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -83,6 +83,10 @@
         <activity
             android:name=".activities.IndoorPositionActivity"
             android:theme="@style/MyTheme" />
+        <activity
+            android:name=".activities.PushSceneryActivity"
+            android:theme="@style/MyTheme" />
+
 
 
 
