--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.lxj:xpopup:1.8.8'
     implementation 'com.android.support:multidex:1.0.3'
 
+    //底部弹出框
+    implementation 'me.shaohui:bottomdialog:1.1.9'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
