--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,10 @@
         <activity
             android:name=".activities.PushSceneryActivity"
             android:theme="@style/MyTheme" />
+        <activity
+            android:name=".activities.ViewPointActivity"
+            android:theme="@style/MyTheme" />
+
 
 
 
