增加数据与天气数据服务器连接

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
         <activity
             android:name=".activities.ViewPointDetailActivity"
             android:theme="@style/MyTheme" />
-
+        <service android:name=".services.BigDatesIntentServices"/>
 
 
 
